# AI_Email_Assistant_Agent

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: agents.py  gmail_service.py  graph.py
utils/: logger.py
